Adjust dark mode colors. Fix shift-Tab problem.

--- a/projects/ng-widgets-showcase/src/app/app.component.scss
+++ b/projects/ng-widgets-showcase/src/app/app.component.scss
@@ -18,7 +18,7 @@
   }
 
   tbw-time-editor {
-    font-size: 36px;
+    font-size: 30px;
     padding-bottom: 0.25em;
   }
 
