--- a/projects/tubular-ng-widgets/src/styles.scss
+++ b/projects/tubular-ng-widgets/src/styles.scss
@@ -119,17 +119,17 @@
   }
 
   .tbw-disabled-arrow-color { color: #060; stroke: #060; }
-  .tbw-disabled-background { background-color: #CCC; fill: #CCC; }
-  .tbw-disabled-text { color: #999; stroke: #999; }
-  .tbw-error-background { background-color: #F67; fill: #F67; }
-  .tbw-indicator-text { color: blue; stroke: blue; }
+  .tbw-disabled-background { background-color: #444; fill: #444; }
+  .tbw-disabled-text { color: #777; stroke: #777; }
+  .tbw-error-background { background-color: #C36; fill: #C36; }
+  .tbw-indicator-text { color: #56F; stroke: #56F; }
   .tbw-normal-background { background-color: #333; fill: #333; }
   .tbw-normal-text { color: #EEE; stroke: #EEE; }
   .tbw-selected-background { background-color: #EEE; fill: #EEE; }
   .tbw-selected-text { color: #333; stroke: #333; }
   .tbw-spinner-fill { background-color: #555; fill: #555; }
-  .tbw-view-only-background { background-color: black; fill: black; }
-  .tbw-view-only-text { color: #0F0; stroke: #0F0; }
-  .tbw-warning-text { color: #C00; stroke: #C00; }
-  .tbw-warning-background { background-color: #FC6; fill: #FC6; }
+  .tbw-view-only-background { background-color: #0A0; fill: #0A0; }
+  .tbw-view-only-text { color: black; stroke: black; }
+  .tbw-warning-text { color: #E45; stroke: #E45; }
+  .tbw-warning-background { background-color: #B80; fill: #B80; }
 }
